--- a/battleship-style.css
+++ b/battleship-style.css
@@ -17,6 +17,9 @@
 /* Main containers */
 .welcome-container {
   height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .setup-container {
@@ -41,31 +44,59 @@
 }
 
 /* Welcom screen */
-.form {
-  width: 25%;
-  margin: auto;
-  background-color: aqua;
+.rules {
+  width: 40%;
   padding: 2%;
-  border: 1px lightgray solid;
-  border-radius: 20%;
+  background: var(--sailor-blue);
+  color: var(--mint);
+  font-family: "Indie Flower", cursive;
+  font-size: 2rem;
+  border-radius: 3%;
 }
 
-.inputField {
-  position: relative;
+.rules h3 {
+  font-weight: bold;
+  font-size: 3rem;
+  padding-top: 3%;
+}
+
+.welcome-container aside {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.welcome-container h1 {
+  font-family: "Indie Flower", cursive;
+  font-size: 12rem;
+  color: var(--sailor-blue);
+}
+
+.form {
+  width: 100%;
+  height: 30%;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0);
+}
+
+.input-field {
+  width: 55%;
+  display: block;
+  font-family: "Indie Flower", cursive;
+  font-weight: bold;
+  font-size: 1.2rem;
   margin: auto;
   margin-bottom: 10px;
   padding: 5px;
-  left: 50%;
-  transform: translate(-50%, 0%);
+  border: none;
+  box-shadow: inset 0px 1px 5px var(--sailor-blue);
 }
 
-.formButton {
-  position: relative;
-  margin: auto;
-  padding: 5px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-}
 /* Setup-Game Screen */
 
 aside {
