--- a/battleship-style.css
+++ b/battleship-style.css
@@ -36,6 +36,7 @@
 .game-container {
   height: 100vh;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -276,4 +277,32 @@ aside h1 {
   font-size: 3.5rem;
   color: var(--mint);
   user-select: none;
+}
+
+.board-legend {
+  flex-basis: 50%;
+  height: 5%;
+  display: flex;
+  padding: 2px, 5px;
+  background: var(--mint);
+  color: var(--sailor-blue);
+  border: solid 3px var(--sailor-blue);
+  border-radius: 5px;
+  font-family: "Indie Flower", cursive;
+  font-size: 1.5rem;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.board-legend h3 {
+  font-weight: bold;
+}
+
+.single-mark {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: var(--sailor-blue);
+  border: solid 3px var(--sailor-blue);
+  border: none;
 }
